--- a/simulation-master/simulation-master-server/pom.xml
+++ b/simulation-master/simulation-master-server/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>platform-application-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
