--- a/applications/test-application/src/main/resources/application.yml
+++ b/applications/test-application/src/main/resources/application.yml
@@ -20,5 +20,5 @@ management.security.enabled: false
 endpoints.shutdown.enabled: true
 
 fog.app:
-  enable-simulation-mode: true
+  enable-simulation-mode: false
   enable-autocomplete-work-mode: true
