add autocomplete work mode (env var) to test app fix DM simulationfeedback

--- a/applications/test-application/src/main/resources/application.yml
+++ b/applications/test-application/src/main/resources/application.yml
@@ -21,4 +21,4 @@ endpoints.shutdown.enabled: true
 
 fog.app:
   enable-simulation-mode: false
-  enable-autocomplete-work-mode: true
+  enable-autocomplete-work-mode: ${AUTOCOMPLETE_WORK_ENABLED:true}
